[metadata]
name =  flask-container-scaffold
author = Jason Guiditta
author_email = jason.guiditta@gmail.com
description = Configuration layer to aid in deployment of Flask apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/release-depot/flask-container-scaffold
project_urls =
    Bug Tracker = https://github.com/release-depot/flask-container-scaffold/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    flask
    pydantic
    toolchest

[options.extras_require]
celery =
    celery

devbase =
    tox

test =
    flake8
    pytest
    pytest-cov

docs =
    sphinx
    sphinx-autobuild
    sphinx-rtd-theme
    myst-parser

dist =
    build
    setuptools_scm
    twine

[options.packages.find]
where = src

[flake8]
exclude = docs
